@@ -874,22 +874,6 @@ first or after the last</td>
 <td></td>
 </tr>
 
-<tr>
-<td><tt><font color="#000099">header</font></tt></td>
-
-<td><font color="#000099">A header page to be included before the list.&nbsp;</font></td>
-
-<td ROWSPAN="2"><font color="#000099">Can only be present for the root
-tag. These parameters are only needed due to JSP 1.1 lack of &lt;jsp:include
-flush="false"> and are obsolete for JSP 1.2 servlet containers, they can
-use normal &lt;jsp:include flush="false">.</font></td>
-</tr>
-
-<tr>
-<td><tt><font color="#000099">footer</font></tt></td>
-
-<td><font color="#000099">A footer page to be included after the list.&nbsp;</font></td>
-</tr>
 </table>
 </blockquote>
 </blockquote>
